# mycobot280

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/mycobot_control/lib/mycobot_control/: mycobot_node
install/mycobot_control/share/mycobot_control/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/: aruco_robot_centering.py  calibration_matrix.npy  distortion_coefficients.npy  mycobot280.ipynb  video_stream_aruco_pose.py
src/.ipynb_checkpoints/: test-checkpoint.ipynb
src/mycobot_control/: package.xml  setup.py
src/mycobot_control/mycobot_control/: aruco_launcher.py
src/mycobot_udp_control/local/: udp_aruco_pose_estimator.py  udp_image_receiver.py
src/mycobot_udp_control_pkg/: package.xml  setup.cfg  setup.py
src/mycobot_udp_control_pkg/mycobot_udp_control/: aruco_udp_launcher.py  udp_pick_place_controller.py
